# cv-backend

./: pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/cv/: __init__.py  handler.py  handlers.py  routes.py  schemas.py
app/core/: constants.py  http_client.py  responses.py  responses_builder.py  settings.py
app/core/config/: settings.py
app/core/schemas/: responses.py
app/models/: example.py
app/modules/browser/: models.py  service.py
app/modules/scraper/: models.py  service.py
app/utils/: parse.py  validations.py
